-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
master
-
3
-
9223372036854775807
tar is not able to keep project id and it won't work for file backup/restart with project id.
This is not only lustre problem, but also same problem in ldiskfs. If MDT needs to be migration from old MDT to new MDT, tar discards project id.
There was discussion on LU-4017, I think we need to address this problem.